tests/valid/ack.knv
fn main() -> void {
    let a = ack(2, 3);
    exit a;
}

fn ack(m: i32, n: i32) -> i32 {
    if m == 0 {
        let r0 = n + 1;
        return r0;
    }
    let m1 = m - 1;
    if n == 0 {
        let r1 = ack(m1, 1);
        return r1;
    }
    let n1 = n - 1;
    let inner = ack(m, n1);
    let r2 = ack(m1, inner);
    return r2;
}
