tests/errors/bare-else.knv
fn main() -> void {
    else {
        exit 1;
    }
    exit 0;
}
